fix: subSidebar scrollbar scss

--- a/Desktop/components/SubSidebar/SubSidebar.module.scss
+++ b/Desktop/components/SubSidebar/SubSidebar.module.scss
@@ -1,9 +1,24 @@
 .SubSidebar {
-    grid-area: subSidebar;
-    position: sticky;
-    top: 0;
-    height: 100vh;
-    overflow-y: auto;
     width: 220px; /* ✅ 필요 시 고정 너비 */
     border-right: 1px solid var(--Gray6);
+    padding-right: 8px;
+    grid-area: subSidebar;
+}
+
+.SubSidebarWrapper {
+    position: sticky;
+    height: 100vh;
+    top: 0;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #d5d5d5;
+        border-radius: 999px;
+    }
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
 }
